# tigervnc

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  ARC_ALGORITHM.md  BUGS.md  BUILDING.txt  BUILD_CONTENTCACHE.md  CACHE_HASH_MISMATCH_ANALYSIS.md  CACHE_IMPROVEMENTS_2025-12-05.md  CACHE_MIN_RECT_SIZE_ANALYSIS.md  CACHE_PROTOCOL_COMPLETE.md  CACHE_PROTOCOL_DESIGN.md  CACHE_PROTOCOL_FIXES_2025-11-12.md  CACHE_PROTOCOL_STATUS.md  CMakeLists.txt  CONTENTCACHE_CLIENT_INTEGRATION.md  CONTENTCACHE_COMPLETE.md  CONTENTCACHE_CONTENTKEY_FIX.md  CONTENTCACHE_DESIGN_IMPLEMENTATION.md  CONTENTCACHE_INTEGRATION_GUIDE.md  CONTENTCACHE_PROTOCOL_BUG.md  CONTENTCACHE_RUST_PARITY_PLAN.md  CONTENTCACHE_TODO.md  DEBUG_LOGGING.md  DESIGN_CONTENT_CACHE.md  HASH_REFACTORING_2025-11-12.md  HEADLESS_DISPLAY_CAPTURE_DESIGN.md  IMPLEMENTATION_GUIDE.md  LARGE_RECT_LOSSY_INTEGRATION.md  LICENCE.TXT  LOSSY_CACHE_BUG_FIX_2025-12-06.md  Makefile  PERSISTENTCACHE_DESIGN.md  PERSISTENTCACHE_LOGGING.md  PERSISTENTCACHE_PARITY_IMPLEMENTATION_NOTES.md  PERSISTENTCACHE_PARITY_PLAN.md  PERSISTENTCACHE_PARITY_PROGRESS.md  PERSISTENTCACHE_PARITY_STATUS_JAN8.md  PERSISTENTCACHE_SESSION_FIX_SUMMARY.md  (+11 more)
rust-vnc-viewer/: CONTENTCACHE_QUICKSTART.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  M1_QUICKREF.md  M1_SUMMARY.md  NEXT_STEPS.md  PERSISTENTCACHE_IMPLEMENTATION_PLAN.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_STATUS.md  PHASE8A_CONTENTCACHE_COMPLETE.md  PHASE9A_ADVANCED_ENCODINGS_COMPLETE.md  PROGRESS.md  PROGRESS_2025-10-24_M1_INITIAL.md  README.md  RUST_VIEWER_STATUS.md  STATUS.md  TODO.md
rust-vnc-viewer/docs/: CONVERGENCE_GATES.md  IMPLEMENTATION_PLAN.md  ROADMAP.md
rust-vnc-viewer/docs/SEP/: README.md  SEP-0001-out-of-scope.md
rust-vnc-viewer/docs/cli/: USAGE.md
rust-vnc-viewer/docs/protocol/: PERSISTENTCACHE_RUST.md  persistent_cache.md
rust-vnc-viewer/docs/spec/: fullscreen-and-multimonitor.md
rust-vnc-viewer/docs/testing/: M1_FULLSCREEN_TESTING.md  PC_ROUNDTRIP_NOTES.md
rust-vnc-viewer/njcvncviewer-rs/: Cargo.toml
rust-vnc-viewer/njcvncviewer-rs/src/: app.rs  connection.rs  display.rs  fullscreen.rs  main.rs
rust-vnc-viewer/platform-input/: Cargo.toml
rust-vnc-viewer/platform-input/src/: gestures.rs  keyboard.rs  lib.rs  mouse.rs  shortcuts.rs
rust-vnc-viewer/platform-input/tests/: keymap.rs
rust-vnc-viewer/rfb-client/: Cargo.toml
rust-vnc-viewer/rfb-client/examples/: headless_connect.rs
rust-vnc-viewer/rfb-client/src/: args.rs  cache_stats.rs  config.rs  connection.rs  errors.rs  event_loop.rs  framebuffer.rs  lib.rs  messages.rs  protocol.rs  protocol_trace.rs  transport.rs
rust-vnc-viewer/rfb-client/tests/: integration.rs  scheduler_tests.rs
rust-vnc-viewer/rfb-common/: Cargo.toml
rust-vnc-viewer/rfb-common/src/: lib.rs
rust-vnc-viewer/rfb-display/: Cargo.toml
rust-vnc-viewer/rfb-display/src/: lib.rs  (+5 more)
rust-vnc-viewer/rfb-encodings/: Cargo.toml
rust-vnc-viewer/rfb-pixelbuffer/: Cargo.toml
rust-vnc-viewer/rfb-protocol/: Cargo.toml
rust-vnc-viewer/rvncviewer/: Cargo.toml
tests/e2e/: .gitignore  CACHE_SANDBOXING_STATUS.md  CMakeLists.txt  CONTENTCACHE_HIT_RATE_ANALYSIS.md  CROSS_PLATFORM_STATUS.md  CROSS_PLATFORM_TESTING.md  FIRST_RUN_CHECKLIST.md  QUICKSTART.md  README.md  REGRESSION_TESTS_TODO.md  SCREENSHOT_COMPARISON_DESIGN.md  STATIC_SCENARIOS_README.md  TEST_TRIAGE_FINDINGS.md  TEST_UPDATE_2025-12-06.md  TOGGLE_PICTURES_TEST.md  VALIDATION.md  capture_slide_screenshots.py  comparator.py  dark_rect_detector.py  deploy_wanem_helper.sh  framework.py  log_parser.py  manual_cache_validation.sh  njcvncviewer_wrapper.py  run_baseline_rfb_test.py  run_black_box_screenshot_test.py  run_contentcache_test.py  run_refresh_stability_test.py  run_refresh_stability_test.py.2025-16-12_2254.bak  run_resize_latency_test.py  sandbox_all_tests.py  scenarios.py  scenarios_static.py  screenshot_compare.py  test_black_box_screenshot_browser.py  test_black_box_screenshot_browser_nocache.py  test_black_box_screenshot_browser_resize_netweaver.py  test_black_box_screenshot_browser_wan_4k_refresh.py  test_black_box_screenshot_cache.py  test_black_box_screenshot_cache_nocache.py  (+40 more)
tests/unit/: CMakeLists.txt  arccache.cxx  bandwidthstats.cxx  cachecoordinator.cxx  configargs.cxx  contentcache.cxx  conv.cxx  convertlf.cxx  decode_manager.cxx  emulatemb.cxx  gesturehandler.cxx  global_client_persistent_cache_gc.cxx  hostport.cxx  mac_coord_utils.cxx  parameters.cxx  persistentcache_crossbpp.cxx  persistentcache_pixelformat.cxx  persistentcache_protocol.cxx  persistentcache_quality.cxx  pixelformat.cxx  serverhashset.cxx  shifttolerantscan.cxx  shortcuthandler.cxx  surface_osx_orientation.cxx  surface_osx_window_orientation.cxx  test_hash_report_protocol.cxx  test_lossy_cache.cxx  test_lossy_mapping.cxx  tiling_analysis.cxx  unicode.cxx
unix/: CMakeLists.txt  xserver120.patch  xserver21.patch
unix/common/: CMakeLists.txt  RandrGlue.h  randr.cxx  unixcommon.h
unix/tx/: CMakeLists.txt  TXButton.h  TXCheckbox.h  TXDialog.h  TXLabel.h  TXWindow.cxx  TXWindow.h
unix/vncconfig/: CMakeLists.txt  QueryConnectDialog.cxx  QueryConnectDialog.h  vncExt.c  vncExt.h  vncconfig.cxx  vncconfig.man
unix/vncpasswd/: CMakeLists.txt  vncpasswd.cxx
unix/vncserver/: .gitignore  CMakeLists.txt  tigervncserver.in  vncserver.users  vncserver@.service.in  vncsession.c  vncsession.man.in  xstartup.centos7
unix/w0vncserver/: CMakeLists.txt  GSocketSource.cxx  GSocketSource.h  PipeWirePixelBuffer.cxx  PipeWirePixelBuffer.h  PipeWireSource.cxx  PipeWireSource.h  PipeWireStream.cxx  PipeWireStream.h  PortalDesktop.cxx  PortalDesktop.h  RFBTimerSource.cxx  RFBTimerSource.h  w0vncserver.cxx  w0vncserver.h
unix/x0vncserver/: CMakeLists.txt  Geometry.cxx  Geometry.h  Image.cxx  Image.h  PollingManager.cxx  PollingManager.h  PollingScheduler.cxx  PollingScheduler.h  RandrGlue.c  TimeMillis.cxx  TimeMillis.h  XDesktop.cxx  XDesktop.h  XPixelBuffer.cxx  XPixelBuffer.h  XSelection.cxx  XSelection.h  buildtime.c  qnum_to_xorgevdev.c  qnum_to_xorgkbd.c  x0vncserver.cxx
(+822 files in other folders)
