[workspace]
members = [
    "rfb-common",
    "rfb-pixelbuffer", 
    "rfb-protocol",
    "rfb-encodings",
    "rfb-client",
    "rfb-display",
    "platform-input",
    "njcvncviewer-rs"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nick Crabtree"]
license = "GPL-2.0-or-later"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Networking
socket2 = "0.5"

# Data structures
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression
flate2 = "1.0"

# Image processing
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
jpeg-decoder = "0.3"

# GUI
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = "0.27"

# Clipboard
arboard = "3.3"

# Parallel processing
rayon = "1.8"
crossbeam-channel = "0.5"

# Utilities
parking_lot = "0.12"
once_cell = "1.19"
bitflags = "2.4"
num_cpus = "1.16"

# Internal dependencies
rfb-common = { path = "rfb-common" }
rfb-pixelbuffer = { path = "rfb-pixelbuffer" }
rfb-protocol = { path = "rfb-protocol" }
rfb-encodings = { path = "rfb-encodings" }
rfb-client = { path = "rfb-client" }
rfb-display = { path = "rfb-display" }
platform-input = { path = "platform-input" }
