[package]
name = "njcvncviewer-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "njcvncviewer-rs"
path = "src/main.rs"

[dependencies]
# Internal crates
rfb-common = { workspace = true }
rfb-protocol = { workspace = true }
rfb-pixelbuffer = { workspace = true }
rfb-encodings = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# GUI
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }

# Clipboard
arboard = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Utilities
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
