[package]
name = "rfb-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
rfb-common = { workspace = true }
rfb-pixelbuffer = { workspace = true }
rfb-protocol = { workspace = true }
rfb-encodings = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
futures = { workspace = true }

# Data structures
bytes = { workspace = true }
once_cell = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
toml = "0.8"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Channels for async communication
flume = "0.11"

# TLS support
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-native-certs = "0.7"
rustls-pki-types = "1.0"

# Synchronization
parking_lot = { workspace = true }

# CLI support (optional)
clap = { version = "4", features = ["derive", "env"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.4"

[features]
default = []
cli = ["dep:clap"]
# Debug-only feature to parse server messages with high-level API in main loop
# instead of byte-type path; use for diagnostics only.
debug_read_server_message = []
