[package]
name = "rfb-encodings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "RFB (VNC) encodings and decoders"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
rfb-common.workspace = true
rfb-pixelbuffer.workspace = true
rfb-protocol.workspace = true
